# gstreamer-learn

./: CMakeLists.txt  README.md
res/: gst-rtsp-server-1.14.2.tar.xz
src/: CMakeLists.txt  hello.c  rtsp-server.c
test/: CMakeLists.txt  test.c  test.h
